--- a/session 20/css/homeWork.css
+++ b/session 20/css/homeWork.css
@@ -86,12 +86,12 @@ ul li a{
   box-sizing: border-box;
   color: #fff;
   font-size: 60px;
-
+  float: left;
 }
 .button1{
   height: 60px;
   width: 100px;
-  margin-left: 480px;
+  margin-left: 400px;
   list-style-type: none;
 }
 .button1, .button2{
@@ -99,16 +99,24 @@ ul li a{
   width: 100px;
   border-radius: 10px;
   border-color: #FF8C94;
-  background-color: white;
-  color: #FF8C94;
+  background-color: none;
+  color: white;
   list-style-type: none;
   font-size: 30px;
+  float: left;
+  margin-top: -30px;
 }
 #leaf{
   padding-left: 400px;
 }
-#logo{
-  text-align: center;
+.logo{
+  margin-top: 0px;
+  font-size: 30px;
+  float: left;
+  font-size: 50px;
+}
+span{
+  color: #e91e63;
 }
 
 select{
@@ -120,8 +128,9 @@ select{
   color: #FF8C94;
   list-style-type: none;
   margin-left: 40px;
-  margin-top: -10px;
   font-size: 25px;
+  margin-top: -30px;
+  float: left;
 }
 footer{
   width: 100%;
